adjusted images and added path in server for style.css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .house-icon {
-  background-image: url('https://cdn-icons-png.flaticon.com/128/11382/11382524.png');
+  background-image: url('https://cdn-icons-png.flaticon.com/512/649/649395.png');
   width: 1.4em;
   height: 1.4em;
   background-repeat: no-repeat;
@@ -40,7 +40,7 @@ body {
 }
 
 .landing-image {
-  background-image: url('https://images.unsplash.com/photo-1448630360428-65456885c650');
+  background-image: url('https://t4.ftcdn.net/jpg/03/32/75/39/360_F_332753934_tBacXEgxnVplFBRyKbCif49jh0Wz89ns.jpg');
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
