--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -3,11 +3,11 @@
   <div class="landing-header">
     <div class="logo-container">
       <div class="house-icon"></div>
-      <h1>OpenHouse</h1>
+      <h1>Cook Book</h1>
     </div>
     <div class="nav-links">
       <a href="/users/profile">Profile</a>
-      <a href="/listings">View all Listings</a>
+      <a href="/listings">View all Recipes</a>
       <a href="/auth/sign-out">Sign Out</a>
     </div>
   </div>
@@ -16,7 +16,7 @@
   <div class="landing-header">
     <div class="logo-container">
       <div class="house-icon"></div>
-      <h1>OpenHouse</h1>
+      <h1>CookBook</h1>
     </div>
     <div class="auth-links">
       <a href="/auth/sign-up">Sign Up</a>
