--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="nav-links">
       <a href="/users/profile">Profile</a>
-      <a href="/listings">View all Recipes</a>
+      <a href="/recipes">View all Recipes</a>
       <a href="/auth/sign-out">Sign Out</a>
     </div>
   </div>
