created full CURD for recipes

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -7,7 +7,8 @@
     </div>
     <div class="nav-links">
       <a href="/users/profile">Profile</a>
-      <a href="/recipes">View all Recipes</a>
+      <a href="/recipes">View Recipes</a>
+      <a href="/ingredients">View My Ingredients</a>
       <a href="/auth/sign-out">Sign Out</a>
     </div>
   </div>
