--- a/views/ingredients/new.ejs
+++ b/views/ingredients/new.ejs
@@ -5,20 +5,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../stylesheets/style.css">
-  <title>New recipes</title>
+  <title>New ingredients</title>
 </head>
 
 <body>
   <%- include('../partials/_navbar.ejs') %>
   <div class="new-container">
     <div class="new-form-container">
-      <h1>New recipe</h1>
-      <form action="/recipes" method="POST">
-        <label for="name">Recipe Name:</label>
+      <h1>New ingredient</h1>
+      <form action="/ingredients" method="POST">
+        <label for="name">ingredient Name:</label>
         <input type="text" name="name" id="name" />
-        <label for="instructions">Instructions:</label>
-        <input type="text" name="instructions" id="instructions" />
-        <button type="submit">Add recipe</button>
+        <button type="submit">Add ingredient</button>
       </form>
     </div>
   </div>
